--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "shipping": "tsx TypescriptSolutions/Random_Interviews/Shipping_Cost2/shippingcost2.ts"
+    "run": "tsx"
   },
   "repository": {
     "type": "git",
