--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@types/node": "^24.7.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@datastructures-js/queue": "^4.3.0"
   }
 }
